--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,3 +2,12 @@
     background: #ffc107;
     color: white;
 }
+
+.caixa{
+    padding: 60px 0;
+    border-bottom: 1px solid #e5e5e5;
+}
+
+footer p a{
+    padding: 0 10px;
+}
